--- a/Commanda/Commanda/Commanda.csproj
+++ b/Commanda/Commanda/Commanda.csproj
@@ -23,5 +23,8 @@
     <EmbeddedResource Update="Pages\MesaPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\PedidoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
